--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "next": "14.2.0",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "node-fetch": "^3.3.2"
+    "sharp": "^0.34.4"
   }
 }
